[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "lunar-birthday-mcp"
version = "0.1.0"
description = "MCP server for Korean lunar<->solar birthday conversion over Streamable HTTP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.28,<2",
  "korean-lunar-calendar>=0.4.0",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "httpx>=0.27,<1",
  "ruff>=0.6,<1",
]

[project.scripts]
lunar-birthday-mcp = "app.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
